--- a/e-commerce-backend/package.json
+++ b/e-commerce-backend/package.json
@@ -2,7 +2,7 @@
   "name": "day-79-ecommerce-mongoose",
   "version": "1.0.0",
   "description": "",
-  "main": "src/index.js",
+  "main": "src/app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "build": "rimraf dist && babel src --out-dir dist  --copy-files",
@@ -24,6 +24,7 @@
   },
   "dependencies": {
     "cors": "^2.8.5",
+    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "mongoose": "^7.0.2",
     "nanoid": "^4.0.1",
